webinars/2024-06-25/taylor/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: taylor-gateway
  namespace: taylor
spec:
  gatewayClassName: teg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
    - name: https
      protocol: HTTPS
      port: 443
      hostname: taylor.missberg.com
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          group: ""
          name: taylor-cert
