webinars/2024-06-25/taylor/blue-green.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blue-green
  namespace: taylor
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: taylor-gateway
      sectionName: https
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /blue-green/
    filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
    backendRefs:
    - group: ""
      kind: Service
      name: blue
      port: 8080
      weight: 0
    - group: ""
      kind: Service
      name: green
      port: 8080
      weight: 10
