webinars/2024-06-25/taylor/blue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
  namespace: taylor
  labels:
    app: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
      - name: blue
        image: us-east1-docker.pkg.dev/envoy-gateway-demo-01/demo-images/blue:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: blue
  namespace: taylor
  labels:
    app: blue
spec:
  ports:
    - port: 8080
  selector:
    app: blue
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blue
  namespace: taylor
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: taylor-gateway
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /blue/
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - group: ""
          kind: Service
          name: blue
          port: 8080
