webinars/2024-06-25/taylor/taylor-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: taylor-route
  namespace: taylor
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: shared-gateway
      name: shared-gateway
      sectionName: demo-miss-berg
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /taylor/
    filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
    backendRefs:
    - group: ""
      kind: Service
      name: blue
      port: 8080
      weight: 8
    - group: ""
      kind: Service
      name: green
      port: 8080
      weight: 2
